kubernetes/llm/components/llama-swap/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: llama-swap-svc
  namespace: llm
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  labels:
    app: llama-swap
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
    - name: metrics
      protocol: TCP
      port: 9100
      targetPort: metrics
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: llama-swap
